--- a/CSS/sobre-nosotros.css
+++ b/CSS/sobre-nosotros.css
@@ -136,6 +136,10 @@ img {
     background-color: #f1f1f1;
     text-align: center;
     padding: 15px 10px;
-    font-size: 0.9em;
     margin-top: 30px;
+}
+
+.pie-de-pagina p {
+    margin: 5px 0;
+    font-size: 0.9em;
 }
